applications/cve-defect-manager/robot-gitee-delivery/gitee-hook-delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitee-hook-delivery-service
  namespace: cve-defect-manager
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gitee-hook-delivery
  type: ClusterIP
