applications/cve-defect-manager/robot-gitee-delivery/gitee-hook-delivery-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: gitee-hook-delivery-ingress
  namespace: cve-defect-manager
spec:
  rules:
  - host: robot-defect.openeuler.org
    http:
      paths:
      - backend:
          serviceName: gitee-hook-delivery-service
          servicePort: 8080
        path: /gitee-hook
  tls:
  - hosts:
    - robot-defect.openeuler.org
    secretName: cve-defect-tls
